fdo#82644 write sal_Unicode chars as Unicode

Regression from commit de84529b55f5b295b089043a7119d6b0d8b92408.

Change-Id: I8f0b148ec7df4f676341f588c04780a705c80a5c
(cherry picked from commit 92240691d1c11a003474a322596fcd1ac3513eb5)
Reviewed-on: https://gerrit.libreoffice.org/10937
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 694766652971c7fa26becd495925dd7ba0ddee7d)
Reviewed-on: https://gerrit.libreoffice.org/10938
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>